# django_rest_template

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: deploy-dev.yml  deploy-prod.yml  deploy.yml
config/settings/: base.py
nginx/: nginx.conf
scripts/: backup.sh  entrypoint.sh
src/: manage.py
src/api/: url_router.py
src/api/v1/: urls.py
src/api/v1/core/urls/: auth.py  misc.py
src/api/v1/core/views/: auth.py  misc.py
src/apps/: url_router.py
src/apps/account/: managers.py  models.py  urls.py
src/apps/account/admin/: admins.py
src/apps/account/migrations/: 0001_initial.py
src/apps/core/: auth_urls.py  models.py
src/apps/core/admin/: admins.py
src/apps/core/api/: views.py
src/apps/core/api/views/: auth.py  base.py  misc.py
src/apps/core/management/commands/: startapp.py
src/apps/core/urls/: auth_urls.py  health_urls.py
src/apps/core/utils/: pagination.py
src/config/middlewares/: abstract.py
src/config/settings/: base.py  dev.py  prod.py
src/config/urls/: base.py  dev.py
src/core/api/: exceptions.py
src/core/utils/: deletion.py  logging.py
src/scripts/: entrypoint.sh  healthcheck.sh
